--- a/ui/ui_template/src/pages/type-page.css
+++ b/ui/ui_template/src/pages/type-page.css
@@ -8,17 +8,19 @@
 .type-card {
   border: 1px solid lightgray;
   border-radius: 4px;
-  padding: 0px 20px 20px;
+  padding: 20px;
   margin-bottom: 20px;
   width: 400px;
 }
 
-.field-label {
+.field-pair {
   margin-bottom: 20px;
 }
 
+.field-label {
+}
+
 .field-content {
-  margin-bottom: 20px;
 }
 
 .type-form {
