--- a/src/ui-setup/ui-template/src/pages/type-page.css
+++ b/src/ui-setup/ui-template/src/pages/type-page.css
@@ -1,19 +1,34 @@
+.background-block {
+  margin-top: 25vh;
+  background-color: cadetblue;
+  padding: 37vh;
+  right: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+}
+
 .type-page {
   display: flex;
-  padding: 50px;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  position: relative;
+  padding-top: 50px;
+  width: 100%;  
 }
 
 .type-card {
   border: 1px solid lightgray;
   border-radius: 4px;
-  padding: 0px 20px 20px;
+  padding: 20px 20px;
   margin-bottom: 20px;
   width: 400px;
+  background: white;
 }
 
 .field-label {
+  font-weight: bold;
   margin-bottom: 20px;
 }
 
@@ -27,6 +42,7 @@
   padding: 0px 20px 20px;
   margin-bottom: 20px;
   width: 400px;
+  background-color: white;
 }
 
 .form-row {
@@ -48,4 +64,12 @@
 
 button {
   margin-right: 10px;
+}
+
+.white {
+  color: white
+}
+
+.title {
+  margin-bottom: -10px;
 }
