render test tweaks

--- a/src/ui-setup/ui-template/src/pages/@type-page.css
+++ b/src/ui-setup/ui-template/src/pages/@type-page.css
@@ -1,5 +1,5 @@
 .background-block {
-  margin-top: 26vh;
+  margin-top: 40vh;
   background-color: cadetblue;
   padding: 60vh;
   right: 0;
@@ -25,6 +25,7 @@
   margin-bottom: 20px;
   width: 400px;
   background: white;
+  box-shadow: 1px 10px 6px 1px rgba(42, 40, 40, 0.2), 0px 1px 1px 0px rgba(229, 217, 217, 0.14), 0px 1px 3px 0px rgba(19, 1, 1, 0.12)
 }
 
 .field-label {
@@ -39,6 +40,7 @@
   margin-bottom: 20px;
   width: 400px;
   background-color: white;
+  box-shadow: 1px 10px 6px 1px rgba(42, 40, 40, 0.2), 0px 1px 1px 0px rgba(229, 217, 217, 0.14), 0px 1px 3px 0px rgba(19, 1, 1, 0.12)
 }
 
 .form-row {
@@ -60,6 +62,7 @@
 
 button {
   margin-right: 10px;
+  margin-bottom: 25px;
 }
 
 .white {
@@ -75,5 +78,10 @@ button {
 }
 
 .title {
-  margin-bottom: -10px;
+  margin-bottom: 0px;
+  margin-bottom: 10px;
+}
+
+.subtitle {
+  margin-top: 0px;
 }
