ui cometic updates

--- a/src/ui-setup/ui-template/src/pages/@type-page.css
+++ b/src/ui-setup/ui-template/src/pages/@type-page.css
@@ -1,6 +1,6 @@
 .background-block {
   margin-top: 40vh;
-  background-color: cadetblue;
+  background-color: #8795c0;
   padding: 60vh;
   right: 0;
   top: 0;
