--- a/src/ui-setup/ui-template/src/HomePage.css
+++ b/src/ui-setup/ui-template/src/HomePage.css
@@ -1,22 +1,58 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 100%;  
+  height: 100vh;
+  width: 100vw;
   position: relative;
 }
 
 .index-page {
   margin: 0 auto;
   text-align: center;
-  justify-content: center;
+  justify-content: start;
 }
 
 .title {
   margin-top: 50px;
-  margin-bottom: -10px;
+  margin-bottom: 10px;
 }
 
 .subtitle {
   font-weight: lighter;
+  margin-bottom: 50px;
+}
+
+.list-item {
+  margin: 20px;
+  font-size: x-large;
+  margin: 20px;
+}
+
+.list-text {
+  color: rgba(57, 21, 173, 0.6);
+  text-decoration: none;
+}
+
+.background-overlay {
+  position: absolute;
+  width: 100%;
+  transition: 0.5s ease;
+  opacity: 1;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.background {
+  display: flex;
+  flex-direction: column;
+  top: 20px;
+  right: -20vw;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  background: white url("./images/holochain-portrait-logo.png") no-repeat scroll
+    left center;
+  background-size: calc(140vw + 30vh) calc(110vh + 40vw);
+  opacity: 0.3;
 }
