--- a/src/ui-setup/ui-template/src/pages/@type-page.css
+++ b/src/ui-setup/ui-template/src/pages/@type-page.css
@@ -1,12 +1,15 @@
 .background-block {
-  margin-top: 40vh;
   background-color: #8795c0;
-  padding: 60vh;
+  height: 100%;
+  width: 98%;
+  margin: 0 auto;
+  margin-top: 43vh;
   right: 0;
   top: 0;
   left: 0;
   position: absolute;
   z-index: -1;
+  box-shadow: 0px 2px 8px 2px rgba(18, 17, 17, 0.2), 0px 1px 1px 0px rgba(25, 24, 24, 0.14), 0px 1px 3px 0px rgba(19, 18, 18, 0.12);
 }
 
 .type-page {
@@ -63,6 +66,13 @@
 button {
   margin-right: 10px;
   margin-bottom: 25px;
+  background: #87a1d8f5;
+  color: white;
+  border-radius: 5px;
+}
+
+.home-btn {
+  background: #3b5ea6f5;
 }
 
 .white {
