--- a/src/ui-setup/ui-template/src/pages/@type-page.css
+++ b/src/ui-setup/ui-template/src/pages/@type-page.css
@@ -67,6 +67,7 @@ button {
   margin-right: 10px;
   margin-bottom: 25px;
   background: #87a1d8f5;
+  padding: 6px;
   color: white;
   border-radius: 5px;
 }
